inventory message listener added, along with some enhanced modification for package speperation. closes #17

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,10 @@
 server:
   port: 8081
-#  active mq configuration
+
 spring:
+  application:
+    name: inventory-service
+  #  active mq configuration
   artemis:
     user: artemis
     password: simetraehcapa
