--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-HELP.md
+README.md
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
@@ -33,4 +33,4 @@ out/
 ### VS Code ###
 .vscode/
 *.iml
-HELP.md
+README.md
