--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-artemis'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.2.2.RELEASE'
     compileOnly 'org.projectlombok:lombok'
     compileOnly 'org.mapstruct:mapstruct:1.3.1.Final'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
