SPRING-CLOUD-CONFIG: closes #27

--- a/src/main/resources/application-localmysql.yml
+++ b/src/main/resources/application-localmysql.yml
@@ -1,4 +1,9 @@
 spring:
+#  disable service discovery
+  cloud:
+    config:
+      discovery:
+        enabled: false
   datasource:
     username: inventory_service
     password: password
