--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-artemis'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.2.2.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-starter-config:2.2.2.RELEASE'
+    compile 'org.springframework.cloud:spring-cloud-starter-zipkin:2.2.2.RELEASE'
     compileOnly 'org.projectlombok:lombok'
     compileOnly 'org.mapstruct:mapstruct:1.3.1.Final'
     implementation 'net.logstash.logback:logstash-logback-encoder:6.3'
