--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,9 @@ spring:
   artemis:
     user: artemis
     password: simetraehcapa
+  # port configuration to zipkin
+  zipkin:
+    baseUrl: http://localhost:9411/
 
 logging:
   level:
