--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     password: simetraehcapa
   # port configuration to zipkin
   zipkin:
-    baseUrl: http://localhost:9411/
+    enabled: false
 
 logging:
   level:
