security configuration for Get Inventory endpoint. closes #33

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,11 @@ spring:
   # port configuration to zipkin
   zipkin:
     enabled: false
+  # spring security basic authentication configuration
+  security:
+    user:
+      name: zeeroiq
+      password: password
 
 logging:
   level:
