docker plugin configuration and Dockerfile. closes #34 & closes #35

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.3.3.RELEASE'
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
     id 'java'
+    id 'com.palantir.docker' version '0.25.0'
 }
 
 group = 'com.shri.brewery.inventory'
@@ -40,6 +41,26 @@ dependencies {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
 }
+
+
+// configuration of docker task
+apply plugin: 'com.palantir.docker'
+bootJar {
+    layered {
+        enabled = true
+        includeLayerTools = true
+    }
+}
+docker {
+    name "${project.name}:${project.version}"
+    tag project.name, project.version as String
+    dockerfile file('src/main/docker/Dockerfile')
+    files "build/libs/${bootJar.archiveFileName.get()}"
+    buildArgs([JAR_FILE: bootJar.archiveFileName.get()] as Map<String, String>)
+    labels(['project':project.name])
+    noCache true
+}
+
 
 compileJava {
     options.annotationProcessorPath = configurations.annotationProcessor
