--- a/src/main/resources/application-local-discovery.yml
+++ b/src/main/resources/application-local-discovery.yml
@@ -1,17 +1,7 @@
 spring:
   cloud:
-    discovery:
-      enabled: true
     config:
       discovery:
-        service-id: brewery-config
-      fail-fast: true
-      # spring cloud config client security configuration
-      username: CurrentUser
-      password: thisPassword
-
-# eureka client configuration
-eureka:
-  client:
-    service-url:
-      defaultZone: http://netflix:eureka@localhost:8761/eureka
+        enabled: true
+  zipkin:
+    enabled: true
